--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ nav {
   padding: 0.5rem 1rem;
 }
 .footer-wrapper {
-  margin: 6rem 0rem;
+  margin: 6rem 0rem 2rem;
   display: flex;
   margin-top: 10rem;
 }
@@ -229,6 +229,13 @@ nav {
   font-weight: 600;
   color: #4c4c4c;
   cursor: pointer;
+}
+.footer-text{
+  text-align: center;
+  margin-bottom: 2rem;
+}
+.footer-text span{
+ color: #e48f0f;
 }
 .testimonial-section-bottom {
   margin-top: 2rem;
